<resources>
    <string name="app_name">CookBook</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="search">Search</string>
    <string name="add_product">Add Product</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="product_icon">Product Icon</string>
    <string name="product_name">Product Name</string>
    <string name="product_amount">Product Amount</string>
    <string name="settings">Settings</string>
    <string name="shopping_list">Shopping List</string>
    <string name="favorites">Favorites</string>
    <string name="recipes">Recipes</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="expand">Expand</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="add_all_to_shopping_list">Add all to shopping list</string>
    <string name="cuisine">Cuisine</string>
    <string name="what_you_ve_got_a_taste_for">What you\'ve got a taste for?</string>
    <string name="meal_type">Meal Type</string>
</resources>