<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_cookbook">

    <fragment
        android:id="@+id/navigation_cookbook"
        android:name="com.example.cookbook.ui.fragment.RecipeListFragment"
        android:label="@string/recipes"
        tools:layout="@layout/fragment_recipe_list" >

        <action
            android:id="@+id/action_navigation_recipe_list_to_recipe_fragment"
            app:destination="@id/recipe_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.cookbook.ui.fragment.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_recipe_list" >
        <action
            android:id="@+id/action_navigation_favorites_to_recipe_fragment"
            app:destination="@id/recipe_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_shopping_list"
        android:name="com.example.cookbook.ui.fragment.ShoppingListFragment"
        android:label="@string/shopping_list"
        tools:layout="@layout/fragment_shopping_list" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.cookbook.ui.fragment.SettingsFragment"
        android:label="@string/settings"
        />
    <fragment
        android:id="@+id/recipe_fragment"
        android:name="com.example.cookbook.ui.fragment.RecipeDetailsFragment"
        android:label="@string/recipe_details"
        tools:layout="@layout/fragment_recipe_details" >
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>

</navigation>