<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dialog.SearchDialogFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/what_you_ve_got_a_taste_for">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/expandable_card_cuisine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <!-- Fixed View Part-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables"
                >

                <TextView
                    android:id="@+id/text_view_cuisine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/cuisine"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/image_view_arrow_cuisine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_round_keyboard_arrow_down_24"
                    android:contentDescription="@string/expand"
                    />

            </FrameLayout>

            <!-- Expandable View Part -->
            <LinearLayout
                android:id="@+id/expandable_chip_group_cuisine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:visibility="gone">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_cuisine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:singleSelection="false" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/expandable_card_meal_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <!-- Fixed View Part-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables"
                >

                <TextView
                    android:id="@+id/text_view_meal_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/meal_type"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/image_view_arrow_meal_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_round_keyboard_arrow_down_24"
                    android:contentDescription="@string/expand"
                    />

            </FrameLayout>

            <!-- Expandable View Part -->
            <LinearLayout
                android:id="@+id/expandable_chip_group_meal_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:visibility="gone">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_meal_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:singleSelection="false" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/search" />

</LinearLayout>